syntax = "proto3";
package helloworld;

service ServerStreamServer {
    //  服务端推送流
    rpc ServerStream (ServerStreamReq) returns (stream ServerStreamResp) {
    }
}

message ServerStreamReq {
    string data = 1;
}

message ServerStreamResp {
    string data = 1;
}